--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "Cargo Build (debug)",
             "runToMain": true,
-            "executable": "./target/thumbv7m-none-eabi/debug/hello-rust-embedded",
+            "executable": "./target/thumbv6m-none-eabi/debug/hello-rust-embedded",
             /* Run `cargo build --example hello` and uncomment this line to run semi-hosting example */
             //"executable": "./target/thumbv7m-none-eabi/debug/examples/hello",
             "cpu": "cortex-m3",
@@ -29,15 +29,15 @@
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "Cargo Build (debug)",
             "runToMain": true,
-            "executable": "./target/thumbv7em-none-eabihf/debug/hello-rust-embedded",
+            "executable": "./target/thumbv6m-none-eabi/debug/hello-rust-embedded",
             /* Run `cargo build --example itm` and uncomment this line to run itm example */
             // "executable": "./target/thumbv7em-none-eabihf/debug/examples/itm",
-            "device": "STM32F303VCT6",
+            "device": "STM32F091RC",
             "configFiles": [
                 "interface/stlink-v2-1.cfg",
-                "target/stm32f3x.cfg"
+                "target/stm32f0x.cfg"
             ],
-            "svdFile": "${workspaceRoot}/.vscode/STM32F303.svd",
+            "svdFile": "${workspaceRoot}/.vscode/STM32F0x1.svd",
             "swoConfig": {
                 "enabled": true,
                 "cpuFrequency": 8000000,
