Fix debugging with VS Code

--- a/openocd.cfg
+++ b/openocd.cfg
@@ -4,7 +4,7 @@
 # interfaces. At any time only one interface should be commented out.
 
 # Revision C (newer revision)
-source [find interface/stlink-v2-1.cfg]
+source [find interface/stlink.cfg]
 
 # Revision A and B (older revisions)
 # source [find interface/stlink-v2.cfg]
