--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 {
-    /* 
+    /*
      * Requires the Rust Language Server (RLS) and Cortex-Debug extensions
      * https://marketplace.visualstudio.com/items?itemName=rust-lang.rust
      * https://marketplace.visualstudio.com/items?itemName=marus25.cortex-debug
@@ -46,7 +46,8 @@
                 "decoders": [
                     { "type": "console", "label": "ITM", "port": 0 }
                 ]
-            }
+            },
+            "gdbPath": "gdb"
         }
     ]
 }
