--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cortex-m = "0.7.6"
 cortex-m-rt = "0.7.1"
 cortex-m-semihosting = "0.5.0"
 nb = "1.0.0"
+nrf24-rs = "0.1.1"
 panic-halt = "0.2.0"
 
 [dependencies.stm32f0xx-hal]
@@ -26,3 +27,7 @@ bench = false
 codegen-units = 1 # better optimizations
 debug = true # symbols are nice and they don't increase the size on Flash
 lto = true # better optimizations
+
+[patch.crates-io]
+# Wait until stm32-rs/stm32f0xx-hal/122 is merged
+stm32f0xx-hal = {git = "https://github.com/easybe/stm32f0xx-hal"}
